dark scrollbar + fix team section mishaps

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -32,6 +32,7 @@
 
 	::-webkit-scrollbar {
 		width: 5px;
+		background-color: black;
 	}
 
 	::-webkit-scrollbar-track {
