--- a/css/main.css
+++ b/css/main.css
@@ -393,7 +393,7 @@ details[open] > summary + * {
 	padding: 0.75rem;
 	color: white;
 	min-width: 25%;
-	max-width: 200px;
+	max-width: 250px;
 }
 figure img {
 	border-radius: 50%;
